syntax = "proto3";

package im.base;

enum services {
	SID_INVALID			= 0;
	SID_DISPATCH		= 1;
	SID_LOGIN			= 2;
	SID_USER			= 3;
	SID_BUDDY			= 4;
	SID_MSG				= 5;
	SID_GROUP			= 6;
	SID_FILE			= 7;
}

enum dispatch_messages {
	MID_INVALID					= 0;
	MID_GET_MESSAGE_SERVERS		= 1;
}

/*
 * 用户相关操作
 */
enum user_messages {
	MID_INVALID					= 0;
	MID_LOGIN					= 1;	// 用户登录
	MID_LOGOUT					= 2;	// 用户退出
	MID_KICK_DEVICE				= 3;	// 退出在某个设备上的登录
	MID_QUERY_SELF_INFO			= 4;	// 请求本用户信息
	MID_QUERY_USER_INFO			= 5;	// 请求其他用户信息
	MID_UPDATE_AVATAR			= 6;	// 更新头像
	MID_UPDATE_SIGN_INFO		= 7;	// 修改个性签名
	MID_CHANGE_STATUS			= 8;	// 修改状态（在线、离线等）
}

/*
 * 聊天消息相关消息
 */
enum chat_messages {
	MID_INVALID					= 0;
	MID_SEND_MESSAGE			= 1;
	MID_MESSAGE_ACK				= 2;	// 确认某个聊天消息
	MID_MESSAGE_READ_ACK		= 3;
	MID_MESSAGE_READ_NOTIFY		= 4;
}

/*
 *	好友相关消息
 */
enum buddy_messages {
	MID_INVALID					= 0;	// 无效
	MID_QUERY_BUDDY_LIST		= 1;	// 获取好友列表
}

enum group_messages {
	MID_INVALID					= 0;	// 无效
	MID_QUERY_GROUP_INFO		= 1;	// 查询组信息
	MID_QUERY_GROUP_MEMBERS		= 1;	// 查询组内成员信息
}